--- a/microservices/discovery/build.gradle
+++ b/microservices/discovery/build.gradle
@@ -2,15 +2,14 @@ jar {
     baseName = 'discovery'
     version = '0.0.1-SNAPSHOT'
 }
-distDocker {
-    exposePort 8761
-    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
-}
-docker {
-    baseImage = 'anapsix/alpine-java:jre8'
+ext {
+    //docker
+    imageName = dockerRepository + jar.baseName
+    version = jar.version
+    dockerBaseImage = 'anapsix/alpine-java:jre8'
+    dockerExposePort = 8080
 }
 
 dependencies {
     compile("org.springframework.cloud:spring-cloud-netflix-eureka-server")
-    compile("org.springframework.boot:spring-boot-starter-security")
 }
