--- a/microservices/userservice/src/main/resources/application.yml
+++ b/microservices/userservice/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
     queue: event.stream
     terminal: user.axon.terminal
   rabbitmq:
-    hostname: 192.168.99.100
+    hostname: localhost
   profiles:
     active: ${profile:default}
   # DataSource settings: set here your own configurations for the database
   # connection.
   datasource:
-    url: jdbc:mysql://localhost:3306/userservicedb?useSSL=false&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://localhost:3306/microservices4vaadin_userservicedb?useSSL=false&zeroDateTimeBehavior=convertToNull
     username: root
     password:
     driverClassName: com.mysql.jdbc.Driver
@@ -54,7 +54,7 @@ spring:
   rabbitmq:
     hostname: rabbitmq  
   datasource:
-    url: jdbc:mysql://mysql/userservicedb?useSSL=false&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://mysql/microservices4vaadin_userservicedb?useSSL=false&zeroDateTimeBehavior=convertToNull
 
 server:
   port: 7575
