--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext {
-        coverallsVersion = "2.6.3"
         springBootVersion = "1.4.0.RELEASE"
         springDependencyManagementVersion = "0.6.0.RELEASE"
         queryDslVersion = "1.0.6"
@@ -12,7 +11,6 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}")
-        classpath("org.kt3k.gradle.plugin:coveralls-gradle-plugin:${coverallsVersion}")
         classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:${queryDslVersion}")
     }
 }
@@ -20,6 +18,7 @@ buildscript {
 ext {
     jUnitVersion = "4.+"
     lombokVersion = "1.16.6"
+    eurekaVersion = "1.1.5.RELEASE"
 
     //docker
     dockerRepository = 'klhauser/microservices4vaadin-'
@@ -45,7 +44,7 @@ project(':microservices') {
 
         dependencyManagement {
             imports {
-                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE'
+                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.BUILD-SNAPSHOT'
             }
         }
 
@@ -71,6 +70,11 @@ project(':microservices') {
 
             testCompile("org.springframework.boot:spring-boot-starter-test")
             testCompile("junit:junit:${jUnitVersion}")
+        }
+        repositories {
+            maven {
+                url 'https://repo.spring.io/libs-snapshot'
+            }
         }
 
         jar {
