--- a/microservices/frontend/build.gradle
+++ b/microservices/frontend/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     compile("org.springframework.session:spring-session:1.2.1.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-redis")
+    compile("org.vaadin:spring-session-redis:1.0")
 
     compile("org.springframework.security.oauth:spring-security-oauth2")
 
