--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = "1.4.0.RELEASE"
-        springDependencyManagementVersion = "0.6.0.RELEASE"
+        springBootVersion = "1.4.2.RELEASE"
+        springDependencyManagementVersion = "0.6.1.RELEASE"
         queryDslVersion = "1.0.6"
     }
     repositories {
@@ -17,8 +17,7 @@ buildscript {
 
 ext {
     jUnitVersion = "4.+"
-    lombokVersion = "1.16.6"
-    eurekaVersion = "1.1.5.RELEASE"
+    lombokVersion = "1.16.12"
 
     //docker
     dockerRepository = 'klhauser/microservices4vaadin-'
@@ -29,7 +28,7 @@ project(':microservices') {
     subprojects {
         apply plugin: 'java'
         apply plugin: 'idea'
-        apply plugin: 'spring-boot'
+        apply plugin: 'org.springframework.boot'
         apply plugin: 'io.spring.dependency-management'
         apply plugin: 'maven'
 
@@ -44,7 +43,7 @@ project(':microservices') {
 
         dependencyManagement {
             imports {
-                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.BUILD-SNAPSHOT'
+                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Camden.SR3'
             }
         }
 
@@ -86,5 +85,5 @@ project(':microservices') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.1'
+    gradleVersion = '3.2.1'
 }
