--- a/microservices/edge/src/main/resources/application.yml
+++ b/microservices/edge/src/main/resources/application.yml
@@ -7,6 +7,7 @@ server:
     key-password: example
 
 ribbon:
+  restclient.enabled: true
   TrustStore: keystore.jks
   TrustStorePassword : example
   ReadTimeout: 60000
