--- a/microservices/frontend/src/main/resources/application.yml
+++ b/microservices/frontend/src/main/resources/application.yml
@@ -9,7 +9,6 @@ server:
   session:
     persistent: false
 
-
 vaadin:
   servlet:
     production-mode: false
@@ -29,7 +28,7 @@ management:
 
 logging:
   level:
-    microservices4vaadin: INFO
+    microservices4vaadin: DEBUG
     org.springframework.security: INFO
     com.netflix.discovery: 'OFF'
 
@@ -40,16 +39,6 @@ spring:
   redis:
     host: redis
 
-server:
-  ssl:
-    key-store: ssl/keystore.jks
-    key-store-password: changeit
-    key-password: noidea
-
-ribbon:
-  TrustStore: ssl/keystore.jks
-  TrustStorePassword: changeit
-    
 eureka:
   client:
     serviceUrl:
