--- a/microservices/discovery/src/main/resources/application.yml
+++ b/microservices/discovery/src/main/resources/application.yml
@@ -8,4 +8,4 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://discovery:${server.port}/eureka/
+      defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
