--- a/microservices/turbine/src/main/resources/application.yml
+++ b/microservices/turbine/src/main/resources/application.yml
@@ -13,6 +13,11 @@ server:
 management:
   port: 8990
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
+
 logging:
   level:
     root: INFO
@@ -23,8 +28,3 @@ logging:
 # For deployment in Docker containers
 spring:
   profiles: docker
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://discovery:8761/eureka/
