--- a/microservices/frontend/build.gradle
+++ b/microservices/frontend/build.gradle
@@ -16,8 +16,8 @@ repositories {
 }
 
 ext {
-    vaadinVersion = "7.7.7"
-    vaadinSpringBootVersion = "1.1.1"
+    vaadinVersion = "8.0.5"
+    vaadinSpringBootVersion = "2.0.1"
     jdalVaadinVersion = "2.1.RC1";
 }
 
@@ -32,7 +32,7 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-hateoas")
 
-    compile("org.springframework.session:spring-session:1.2.1.RELEASE")
+    compile("org.springframework.session:spring-session")
     compile("org.springframework.boot:spring-boot-starter-data-redis")
 
     compile("org.springframework.security.oauth:spring-security-oauth2")
