--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         coverallsVersion = "2.7.1"
-        springBootVersion = "1.4.5.RELEASE"
-        queryDslVersion = "1.0.6"
+        springBootVersion = "1.5.7.RELEASE"
+        queryDslVersion = "1.0.9"
     }
     repositories {
         mavenCentral()
@@ -31,7 +31,6 @@ project(':microservices') {
         apply plugin: 'java'
         apply plugin: 'idea'
         apply plugin: 'org.springframework.boot'
-        apply plugin: 'io.spring.dependency-management'
         apply plugin: 'maven'
 
         springBoot {
@@ -45,7 +44,7 @@ project(':microservices') {
 
         dependencyManagement {
             imports {
-                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Camden.SR6'
+                mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Dalston.SR4'
             }
         }
 
@@ -93,5 +92,5 @@ if (project != project(':common')) {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
+    gradleVersion = '4.2.1'
 }
