--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,21 @@ services:
       - "5672:5672"
 
   redis:
-    image: redis:3.2.1-alpine
+    image: redis:4.0.2-alpine
     ports:
       - "6379:6379"
 
   mongodb:
-    image: mongo:2.4
+    image: mongo:3.4.10
     ports:
       - "27017:27017"
-      
+
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-      MYSQL_USER: root
+     - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+     - MYSQL_USER=root
+    volumes:  # Mount relative path source folder on host to absolute path destination folder on docker container
+      - './docker-db-dump/:/docker-entrypoint-initdb.d/'
     ports:
       - "3306:3306"
