--- a/microservices/authserver/docker-compose.yml
+++ b/microservices/authserver/docker-compose.yml
@@ -4,8 +4,13 @@ services:
   rabbitmq:
     image: rabbitmq:3.5.1
     
+  redis:
+    image: redis:4.0.2-alpine
+    ports:
+      - "6379:6379"
+      
   mongodb:
-    image: mongo:2.4
+    image: mongo:3.4.10
 
   eventstore:
     image: klhauser/microservices4vaadin-eventstore
