--- a/microservices/userservice/build.gradle
+++ b/microservices/userservice/build.gradle
@@ -4,8 +4,8 @@ jar {
 }
 
 ext {
-    hsqlDbVersion = "2.3.4"
-    dbUnitVersion = "2.5.2"
+    hsqlDbVersion = "2.4.0"
+    dbUnitVersion = "2.5.4"
     flywayVersion = "4.0.3"
     springTestDbunitVersion = "1.3.0"
 
@@ -17,7 +17,7 @@ ext {
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.data:spring-data-releasetrain:Hopper-SR1'
+        mavenBom 'org.springframework.data:spring-data-releasetrain:Ingalls-SR8'
     }
 }
 
@@ -29,7 +29,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-hateoas")
     compile("org.springframework.boot:spring-boot-configuration-processor")
 
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.4") // used for LocalDate java8
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-hibernate4:2.9.2")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.2") // used for LocalDate java8
     compile("org.jadira.usertype:usertype.extended:5.0.0.GA") // needed for dbunit and hibernate
 
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
