not supported anymore

--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,6 @@ jobs:
           name: Push image to docker hub
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+              docker login -u $DOCKER_USER -p $DOCKER_PASS
               ./start-dockerPush.sh
             fi  
